// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button correctly 1`] = `
<div>
  <button
    class="rounded-md bg-gradient-to-r from-blue-500 to-purple-600 hover:scale-105 hover:shadow-lg dark:shadow-sm dark:hover:shadow-white active:bg-blue-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600 transition-all"
  >
    Button
  </button>
</div>
`;

exports[`Button renders Link correctly 1`] = `
<div>
  <a
    class="rounded-md bg-gradient-to-r from-blue-500 to-purple-600 hover:scale-105 hover:shadow-lg dark:shadow-sm dark:hover:shadow-white active:bg-blue-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600 transition-all"
    href="/"
  >
    Button Link
  </a>
</div>
`;
